Add tests for command error codes and fine-tune command line options

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -25,6 +25,7 @@ set(sources
     gendoc_command_tests.cpp
     help_command_tests.cpp
     imports_command_tests.cpp
+    utils.h
     version_command_tests.cpp)
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${sources})
 
