Refactor structure used to represent command arguments to classes and add options for configure command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ set(sources
     src/commands/check/check_command.cpp
     src/commands/configure/configure_command.h
     src/commands/configure/configure_command.cpp
+    src/commands/configure/lang_options.h
     src/commands/gendoc/gendoc_command.h
     src/commands/gendoc/gendoc_command.cpp
     src/commands/help/help_command.h
