Refactor fetching busrpc-dev dependencies and add nlohmann-json. Start generator implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,15 +11,22 @@ project(busrpc-dev
 option(BUSRPC_BUILD_TESTS "Build busrpc development tool tests" OFF)
 option(BUSRPC_USE_EXTERNAL_CLI11 "Use external CLI11 library" OFF)
 option(BUSRPC_USE_EXTERNAL_PROTOBUF "User external protobuf library" OFF)
+option(BUSRPC_USE_EXTERNAL_NLOHMANN_JSON "User external nlohmann-json library" OFF)
 
-if(NOT BUSRPC_USE_EXTERNAL_CLI11 AND NOT DEFINED BUSRPC_CLI11_TAG)
-    set(BUSRPC_CLI11_TAG c2ea58c7f9bb2a1da2d3d7f5b462121ac6a07f16 # v2.3.1
-        CACHE STRING "Tag or commit hash of CLI11 library to be fetched" FORCE)
+
+if(NOT BUSRPC_USE_EXTERNAL_CLI11 AND NOT DEFINED BUSRPC_CLI11_VERSION)
+    set(BUSRPC_CLI11_VERSION "2.3.1"
+        CACHE STRING "Version of CLI11 library to be fetched" FORCE)
 endif()
 
-if(NOT BUSRPC_USE_EXTERNAL_PROTOBUF AND NOT DEFINED BUSRPC_PROTOBUF_TAG)
-    set(BUSRPC_PROTOBUF_TAG 90b73ac3f0b10320315c2ca0d03a5a9b095d2f66 # v21.9
-        CACHE STRING "Tag or commit hash of Protobuf library to be fetched" FORCE)
+if(NOT BUSRPC_USE_EXTERNAL_PROTOBUF AND NOT DEFINED BUSRPC_PROTOBUF_VERSION)
+    set(BUSRPC_PROTOBUF_VERSION "21.12"
+        CACHE STRING "Version of Protobuf library to be fetched" FORCE)
+endif()
+
+if(NOT BUSRPC_USE_EXTERNAL_NLOHMANN_JSON AND NOT DEFINED BUSRPC_NLOHMANN_JSON_VERSION)
+    set(BUSRPC_NLOHMANN_JSON_VERSION "3.11.2"
+        CACHE STRING "Version of nlohmann-json library to be fetched" FORCE)
 endif()
 
 if(NOT DEFINED CMAKE_BUILD_TYPE AND NOT DEFINED CMAKE_CONFIGURATION_TYPES)
@@ -33,18 +40,25 @@ endif()
 
 if(NOT BUSRPC_USE_EXTERNAL_CLI11)
     include("cmake/FetchCLI11.cmake")
-    fetch_cli11(${BUSRPC_CLI11_TAG})
+    fetch_cli11(${BUSRPC_CLI11_VERSION})
 else()
     find_package(CLI11 CONFIG REQUIRED)
 endif()
 
 if(NOT BUSRPC_USE_EXTERNAL_PROTOBUF)
     include("cmake/FetchProtobuf.cmake")
-    fetch_protobuf(${BUSRPC_PROTOBUF_TAG})
+    fetch_protobuf(${BUSRPC_PROTOBUF_VERSION})
     set(BUSRPC_TESTS_PROTOBUF_ROOT "${protobuf_SOURCE_DIR}/src")
 else()
     find_package(Protobuf REQUIRED)
     set(BUSRPC_TESTS_PROTOBUF_ROOT "${Protobuf_INCLUDE_DIR}")
+endif()
+
+if(NOT BUSRPC_USE_EXTERNAL_NLOHMANN_JSON)
+    include("cmake/FetchNlohmannJson.cmake")
+    fetch_nlohmann_json(${BUSRPC_NLOHMANN_JSON_VERSION})
+else()
+    find_package(nlohmann_json CONFIG REQUIRED)
 endif()
 
 #----------------------------------------------------------------------------------------------------------------------
@@ -116,8 +130,6 @@ target_compile_features(busrpc-obj PUBLIC cxx_std_20)
 separate_arguments(warnings NATIVE_COMMAND "${BUSRPC_WARNINGS}")
 target_compile_options(busrpc-obj PUBLIC ${warnings})
 
-
-
 target_include_directories(busrpc-obj
     PUBLIC
         "${CMAKE_CURRENT_SOURCE_DIR}/src"
@@ -126,7 +138,8 @@ target_include_directories(busrpc-obj
 target_link_libraries(busrpc-obj
     PUBLIC
         CLI11::CLI11
-        protobuf::libprotobuf)
+        protobuf::libprotobuf
+        nlohmann_json::nlohmann_json)
 
 if (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU" AND ${CMAKE_CXX_COMPILER_VERSION} VERSION_LESS "9.1")
     target_link_libraries(busrpc-obj PRIVATE stdc++fs)
