--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -28,7 +28,7 @@ set(sources
     namespace_entity_tests.cpp
     class_entity_tests.cpp
     method_entity_tests.cpp
-    services_entity_tests.cpp
+    implementation_entity_tests.cpp
     service_entity_tests.cpp
     enum_entity_tests.cpp
     struct_entity_tests.cpp
