--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,12 @@ project(busrpc-dev
 # general settings and options
 #----------------------------------------------------------------------------------------------------------------------
 
-option(BUSRPC_BUILD_TESTS "Build busrpc development tool tests" OFF)
+option(BUSRPC_BUILD_TESTS "Build busrpc development tool tests" ON)
 option(BUSRPC_BUILD_DOCS "Build busrpc development tool documentation" OFF)
 option(BUSRPC_USE_EXTERNAL_CLI11 "Use external CLI11 library" OFF)
 option(BUSRPC_USE_EXTERNAL_PROTOBUF "User external protobuf library" OFF)
 option(BUSRPC_USE_EXTERNAL_NLOHMANN_JSON "User external nlohmann-json library" OFF)
-option(BUSRPC_USE_STATIC_PROTOBUF "Link protobuf library statically" OFF)
+option(BUSRPC_USE_STATIC_PROTOBUF "Link protobuf library statically" ON)
 
 if(NOT BUSRPC_USE_EXTERNAL_CLI11 AND NOT DEFINED BUSRPC_CLI11_FETCH_VERSION)
     set(BUSRPC_CLI11_FETCH_VERSION "2.3.1"
@@ -28,6 +28,14 @@ endif()
 if(NOT BUSRPC_USE_EXTERNAL_NLOHMANN_JSON AND NOT DEFINED BUSRPC_NLOHMANN_JSON_FETCH_VERSION)
     set(BUSRPC_NLOHMANN_JSON_FETCH_VERSION "3.11.2"
         CACHE STRING "Version of nlohmann-json library to be fetched" FORCE)
+endif()
+
+if(MSVC)
+    set(BUSRPC_WARNINGS "/W4 /EHsc /w14242 /w14254 /w14263 /w14265 /w14287 /w14289 /w14296 /w14311 /w14545 /w14546 /w14547 /w14549 /w14555 /w14640 /w14826 /w14928 /WX"
+        CACHE STRING "Busrpc development tool warnings" FORCE)
+else()
+    set(BUSRPC_WARNINGS "-Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion -Wcast-align -Wcast-qual -Wnull-dereference -Woverloaded-virtual -Wformat=2 -Werror"
+        CACHE STRING "Busrpc development tool warnings" FORCE)
 endif()
 
 if(NOT DEFINED CMAKE_BUILD_TYPE AND NOT DEFINED CMAKE_CONFIGURATION_TYPES)
